# FroboMind

./: README  rosdep.yaml  stack.xml
fmControllers/: CMakeLists.txt  Makefile  manifest.xml
fmControllers/src/flystix/: PID.cpp  PID.hpp  controller.cpp
fmCore/launch/: flight.launch  gpstest.launch  telelink.launch
fmEstimators/: CMakeLists.txt  mainpage.dox  manifest.xml
fmEstimators/src/flystix/: ekfAtt.cpp  ekfAtt.hpp  ekfAttQuat.cpp  ekfAttQuat.hpp  ekfAttitude.cpp  ekfAttitude.hpp  ekfPos.cpp  ekfPos.hpp  ekfYaw.cpp  ekfYaw.hpp  flystixEstimator.cpp  kalman.cpp  kalman.hpp
fmExtractors/: CMakeLists.txt  manifest.xml
fmExtractors/src/global_pose_extractors/: gps_state_node.cpp
fmExtractors/src/zigbee/: TeleGround.cpp
fmFusion/: CMakeLists.txt  mainpage.dox  manifest.xml
fmFusion/src/: adxl345.cpp  adxl345.hpp  avr.cpp  avr.hpp  bmp085.cpp  bmp085.hpp  ekfAtt.cpp  ekfAtt.hpp  ekfAttQuat.cpp  ekfAttQuat.hpp  ekfAttitude.cpp  ekfAttitude.hpp  ekfPos.cpp  ekfPos.hpp  ekfYaw.cpp  ekfYaw.hpp  fmFusion.cpp  fmKalmanAndRaw.cpp  fmMag.cpp  fmRawData.cpp  hmc5883l.cpp  hmc5883l.hpp  i2c-dev.h  i2cfile.cpp  i2cfile.hpp  itg3200.cpp  itg3200.hpp  kalman.cpp  kalman.hpp  micromag.cpp  micromag.hpp
fmMsgs/msg/: accelerometer.msg  airSpeed.msg  airframeControl.msg  airframeState.msg  airframe_control.msg  altitude.msg  battery.msg  fmTeleAir2Ground.msg  fmVector3.msg  gps_state.msg  gyroscope.msg  sysState.msg  teleAir2Ground.msg  teleGround2Air.msg
fmSensors/: CMakeLists.txt  manifest.xml
fmSensors/src/global_sensors/: gps_node.cpp
fmTeleAir/: CMakeLists.txt  mainpage.dox  manifest.xml
fmTeleAir/src/: fmTeleAir.cpp
fmTeleGround/: CMakeLists.txt  mainpage.dox  manifest.xml
fmTeleGround/src/: fmRemoteGround.cpp  fmTeleGround.cpp  slip.cpp  slip.hpp  ttySetup.cpp  ttySetup.hpp
fmTest/: CMakeLists.txt  mainpage.dox  manifest.xml
fmTest/src/fakePub/: fakePublisher.cpp
fmTools/: flystixconf.txt  gpsconfig.cpp  launch  ubloxconf  ubloxconf.cpp
ground_station/: CMakeLists.txt  manifest.xml
ground_station/gui/: gui.glade
ground_station/include/ground_station/: ground_station.h
ground_station/include/ground_station/gui/: ground_station_appdata.h  gtkcompass.h
ground_station/launch/: debug.launch  ground_station.launch  sim.launch
ground_station/src/: ground_station.cpp
ground_station/src/gui/: gpsd_viewer_osd.c  ground_station_callbacks.cpp  gtkaltimeter.c  gtkcompass.c  gtkturncoordinator.c
testStack/: CMakeLists.txt  manifest.xml
testStack/src/: slip.cpp  slip.hpp  testStack.cpp
